--- a/_sass/minimal-mistakes/skins/_contrast2.scss
+++ b/_sass/minimal-mistakes/skins/_contrast2.scss
@@ -3,10 +3,11 @@
    ========================================================================== */
 
 /* Colors */
-$text-color: #ff0000 !default;
+$text-color: #000 !default;
 $muted-text-color: $text-color !default;
 $primary-color: #ff0000 !default;
-$border-color: mix(#fff, $text-color, 75%) !default;
+// $border-color: mix(#fff, $text-color, 75%) !default;
+$border-color: #00ff00 !default;
 $footer-background-color: #000 !default;
 $link-color: #0000ff !default;
 $masthead-link-color: $text-color !default;
