--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -67,7 +67,7 @@
 
   .site-nav {
     margin-left: 0;
-
+    font-size: $type-size-2;
     @include breakpoint($small) {
       float: right;
     }
