--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -70,6 +70,7 @@
     font-size: $type-size-2;
     @include breakpoint($small) {
       float: right;
+      font-size: $type-size-2;
     }
   }
 
