--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -67,7 +67,7 @@
 
   .site-nav {
     margin-left: 0;
-    @include breakpoint($large) {
+    @include breakpoint($x-large) {
       float: right;
     }
   }
