--- a/_sass/minimal-mistakes/skins/_contrast2.scss
+++ b/_sass/minimal-mistakes/skins/_contrast2.scss
@@ -43,7 +43,9 @@ $base0f: #b18a3d !default;
 }
 
 .page__footer {
-  color: #000 !important; // override
+  color: #fff !important; // override
 }
 
+.page__footer-follow .social-icons .svg-inline--fa {
+  color: inherit;
 }
