--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -4,7 +4,7 @@
 
 .masthead {
   position: relative;
-  border-bottom: 0px solid $border-color;
+  padding-top:10em;
   -webkit-animation: $intro-transition;
   animation: $intro-transition;
   -webkit-animation-delay: 0.15s;
