change breadcrumb to 'home' only

--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -24,7 +24,7 @@
         </li>
         <span class="sep">{{ site.data.ui-text[site.locale].breadcrumb_separator | default: "/" }}</span>
       {% endif %}
-      {% if forloop.last %}
+      <!-- {% if forloop.last %}
         <li class="current">{{ page.title }}</li>
       {% else %}
         {% assign i = i | plus: 1 %}
@@ -33,7 +33,7 @@
           <meta itemprop="position" content="{{ i }}" />
         </li>
         <span class="sep">{{ site.data.ui-text[site.locale].breadcrumb_separator | default: "/" }}</span>
-      {% endif %}
+      {% endif %} -->
     {% endfor %}
   </ol>
 </nav>
