--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -42,6 +42,7 @@
 
 .site-logo img {
   max-height: 2rem;
+  margin-left: 10;
 }
 
 .site-title {
@@ -62,7 +63,7 @@
 .masthead__menu {
   float: left;
   margin-left: 0;
-  margin-right: 0;
+  margin-right: 10;
   width: 100%;
   clear: both;
 
