--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -42,7 +42,7 @@
 
 .site-logo img {
   max-height: 2rem;
-  margin-left: 10;
+  margin-left: 10em;
 }
 
 .site-title {
@@ -80,7 +80,7 @@
     clear: both;
     list-style-type: none;
   }
-  li:before { content: "/"; padding-right: 3px; }
+  li:before { content: "|"; padding-right: 3px; }
   li:first-child:before { content: ""; padding-right: 0; }
 }
 
