--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -30,7 +30,7 @@ h6 {
   margin: 2em 0 0.5em;
   line-height: 1.2;
   font-family: $header-font-family;
-  font-weight: bold;
+  font-weight: lighter;
 }
 
 h1 {
@@ -39,19 +39,22 @@ h1 {
 }
 
 h2 {
+  margin-top: 0;
   font-size: $type-size-2;
 }
 
 h3 {
-  font-size: $type-size-5;
+  margin-top: 0;
+  font-size: $type-size-3;
 }
 
 h4 {
-  font-size: $type-size-6;
+  margin-top: 0;
+  font-size: $type-size-4;
 }
 
 h5 {
-  font-size: $type-size-6;
+  font-size: $type-size-5;
 }
 
 h6 {
