--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -21,6 +21,7 @@ body {
   }
 }
 
+h0,
 h1,
 h2,
 h3,
@@ -33,31 +34,31 @@ h6 {
   font-weight: lighter;
 }
 
-h1 {
+h0 {
   margin-top: 0;
   font-size: $type-size-0;
 }
 
-h2 {
+h1 {
   margin-top: 0;
   font-size: $type-size-1;
 }
 
-h3 {
+h2 {
   margin-top: 0;
   font-size: $type-size-2;
 }
 
-h4 {
+h3 {
   margin-top: 0;
   font-size: $type-size-3;
 }
 
-h5 {
+h4 {
   font-size: $type-size-4;
 }
 
-h6 {
+h5 {
   font-size: $type-size-5;
 }
 
