--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -32,8 +32,13 @@ body {
 
 .initial-content,
 .search-content {
-  flex: 1 0 auto;
-  align-items:center;
+
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: center;
+  align-self: center;
+  align-items: center;
 }
 
 .page {
