--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -30,13 +30,14 @@ h6 {
   margin: 2em 0 0.5em;
   line-height: 1.2;
   font-family: $header-font-family;
-  font-weight: lighter;
+  font-weight: bold;
 }
 
 
 h1 {
   margin-top: 0;
   font-size: $type-size-0;
+  font-weight: 100;
 }
 
 h2 {
