--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -80,7 +80,7 @@
   ul li a:after{
     margin: 0;
     padding: 0;
-    content: ""|"";
+    content: "|";
     clear: both;
     list-style-type: none;
   }
