--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -79,7 +79,7 @@
  
   ul li a:after{
     margin: 0;
-    padding: 0;
+    padding: 2em;
     content: "|";
     clear: both;
     list-style-type: none;
