--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -85,6 +85,13 @@
     clear: both;
     list-style-type: none;
   }
+  ul {
+    margin: 0;
+    padding-right: 0;
+    padding-left: 0;
+    clear: both;
+    list-style-type: none;
+  }
 
 }
 
