--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -62,8 +62,8 @@
 }
 
 .masthead__menu {
-  float: right;
-  margin-left: 0;
+  float: left;
+  margin-left: auto;
   margin-right: auto;
   width: 50%;
   clear: both;
