--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -2,6 +2,6 @@
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700|PT+Serif:400,700,400italic" rel="stylesheet" type="text/css">
-<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700&display=swap" rel="stylesheet" type="text/css">
 
 <!-- end custom head snippets -->
