--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -88,6 +88,18 @@ body {
   font-size: $type-size-4;
 }
 
+.splash_content {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        width: 100%;
+        text-align: center;
+        margin: 10% 0;
+        min-height: 200px;
+        background-color: rgba(33, 33, 33, .3);
+        align-items: center;
+    }
 .page__content {
 
 	h1, h2, h3, h4, h5, h6 {
