--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -91,7 +91,12 @@ body {
 .splash_content {
         display: flex;
         align-items: center;
-        
+        justify-content: center;
+        flex-direction: column;
+        width: 100%;
+        margin: 10% 0;
+        min-height: 200px;
+        align-items: center;
     }
 .page__content {
 
