--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -5,6 +5,7 @@
 .masthead {
   position: relative;
   padding-top:1em;
+  padding-bottom:3em;
   -webkit-animation: $intro-transition;
   animation: $intro-transition;
   -webkit-animation-delay: 0.15s;
