--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -32,13 +32,11 @@ body {
 
 .initial-content,
 .search-content {
-
+  height: 100%
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-item-align: center;
-  align-self: center;
-  align-items: center;
+
 }
 
 .page {
