--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -32,11 +32,10 @@ body {
 
 .initial-content,
 .search-content {
-  height: 100%
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-
+  height: 100%;
 }
 
 .page {
@@ -88,7 +87,7 @@ body {
 
 .splash_content {
         display: flex;
-        height: 100%
+        height: 100%;
         align-items: center;
     }
 .page__content {
