--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -36,6 +36,7 @@ body {
   display: -ms-flexbox;
   display: flex;
   height: 100vh;
+  margin-left:auto;
 }
 
 .page {
@@ -87,7 +88,12 @@ body {
 
 .splash_content {
         display: flex;
-        height: 100%;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+        width: 100%;
+        margin: 10% 0;
+        min-height: 100vh;
         align-items: center;
     }
 .page__content {
