--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -88,11 +88,8 @@ body {
 .splash_content {
         display: flex;
         align-items: center;
-        justify-content: center;
-        flex-direction: row;
         width: 100%;
-        margin: 10% 0;
-        align-items: center;
+        margin: 30% 30%;
     }
 .page__content {
 
