--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -87,6 +87,7 @@ body {
 
 .splash_content {
         display: flex;
+        flex-direction: column;
         align-items: center;
         width: 100%;
         margin: 30% 30%;
