--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -89,6 +89,7 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content:flex-start;
         width: 100%;
         margin: 30% 30%;
     }
