--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -90,7 +90,15 @@ body {
         align-items: center;
         justify-content:flex-start;
         width: 100%;
-    }
+}
+
+.people_row {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content:space-around;
+        width: 100%;
+}
 
 .page__content {
 
