--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -34,7 +34,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  min-height: 30vh;
+  min-height: 50vh;
 }
 
 .page {
@@ -89,15 +89,13 @@ body {
         flex-direction: column;
         align-items: center;
         justify-content:flex-start;
-        width: 100%;
 }
 
 .people_row {
         display: flex;
         flex-direction: row;
-        align-items: center;
+        align-items: flex-start;
         justify-content:space-around;
-        width: 100%;
 }
 
 .page__content {
