--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -96,6 +96,7 @@ body {
         flex-direction: row;
         align-items: flex-start;
         justify-content:space-around;
+        width:100%;
 }
 
 .page__content {
