--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -87,8 +87,8 @@ body {
 .splash_content {
         display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-content:flex-start;
+        align-items: left;
+        justify-content: center;
 }
 
 .people_row {
@@ -96,7 +96,7 @@ body {
         flex-direction: row;
         align-items: flex-start;
         justify-content:space-around;
-        width:100%;
+        min-width:50vw;
 }
 
 .page__content {
