--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -89,6 +89,7 @@ body {
         flex-direction: column;
         align-items: left;
         justify-content: center;
+        margin: 30% 30%;
 }
 
 .people_row {
