--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -98,6 +98,7 @@ body {
         align-items: flex-start;
         justify-content:space-around;
         min-width:50vw;
+        margin: 30% 30%;
 }
 
 .page__content {
