--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -95,7 +95,7 @@ body {
 .people_row {
         display: flex;
         flex-direction: row;
-        justify-content:space-between;
+        justify-content:space-around;
         min-width:60vw;
 }
 
