playing with margin

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -35,7 +35,6 @@ body {
   display: -ms-flexbox;
   display: flex;
   min-height: 30vh;
-  max-height: 50vh;
 }
 
 .page {
@@ -86,6 +85,7 @@ body {
 }
 
 .splash_content {
+        margin-top: 2em;
         display: flex;
         flex-direction: column;
         align-items: left;
