--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -19,7 +19,7 @@
     margin-left: auto;
     margin-right: auto;
     padding: 0.5em;
-    max-width: 100%;
+    max-width: calc(100% - 200px);
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
