--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -7,7 +7,8 @@
   padding-top:1em;
   padding-bottom:3em;
   padding-left:1em;
-  padding-right:1em;
+  padding-right:200px;
+  width: calc(100% - 200px);
   -webkit-animation: $intro-transition;
   animation: $intro-transition;
   -webkit-animation-delay: 0.15s;
@@ -19,7 +20,6 @@
     margin-left: auto;
     margin-right: auto;
     padding: 0.5em;
-    max-width: calc(100% - 200px);
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
