--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -5,8 +5,6 @@
 .masthead {
   position: relative;
   padding-top:1em;
-  padding-bottom:3em;
-  width: 100%;
   -webkit-animation: $intro-transition;
   animation: $intro-transition;
   -webkit-animation-delay: 0.15s;
@@ -18,6 +16,7 @@
     margin-left: auto;
     margin-right: auto;
     padding: 0.5em;
+    max-width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -64,9 +63,9 @@
 
 .masthead__menu {
   float: left;
-  margin-left: 0;
+  margin-left: auto;
   margin-right: auto;
-  width: 90%;
+  width: 100%;
   clear: both;
 
   .site-nav {
