--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -88,8 +88,8 @@ body {
         margin-top: 2em;
         display: flex;
         flex-direction: column;
-
-        margin: 30% 30%;
+        justify-content: center;
+        
 }
 
 .people_row {
