--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -86,6 +86,7 @@ body {
 
 .splash_content {
         margin-top: 2em;
+        margin-left: 30%;
         display: flex;
         flex-direction: column;
         justify-content: center;
