--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -42,8 +42,7 @@
 
 .site-logo img {
   max-height: 2rem;
-  -ms-flex-item-align: center;
-  align-self: center;
+  margin-left:8em;
 }
 
 .site-title {
